# pythocron

./: .gitignore  package.json  pyproject.toml  requirements.txt
.github/workflows/: fetch.yml  fetch.yml.  formatting.yml
Crontabs/: Crontab.py  CrontabManager.py  runCron.sh  setupCrontab.py
Modules/: Utils.py
modules/: Utils.py
pythocron/: CrontabManager.py  runCron.sh  updateEnvironment.py
