[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Modules"
version = "0.1.0"
description = "Some things I made"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "GPL-3.0-or-later" }
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
where = ["."]
include = ["Modules*"]
