[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pythocron"
version = "0.1.0"
description = "A library to run Python files once each day."
readme = "README.md"
requires-python = ">=3.7"
license = { text = "GPL-3.0-or-later" }
dynamic = ["dependencies"]
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
where = ["."]
include = ["pythocron*"]
